Correctif icône dans un bouton IE
- Correction du bug au survol d'un bouton contenant une icône sous IE

--- a/web-resources/src/main/resources/css/loap-main.css
+++ b/web-resources/src/main/resources/css/loap-main.css
@@ -1174,7 +1174,7 @@ a.icon.active:not(.button):not(.disabled):not(.no-bg) > .text {color: white;}
 */
 
 /* Javascript Mouse Events Fixes */
-a.icon:after {
+.icon:after {
   content: ''; /* CSS Cover Fix */
   position: absolute;
   top: 0;
@@ -1182,7 +1182,7 @@ a.icon:after {
   width: 100%;
   height: 100%;
 }
-a.icon > svg {
+.icon > svg {
   pointer-events: none; /* Pointer Events Fix */
 }
 
